--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,24 @@
     tools:context=".view.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Image:"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintVertical_bias="0.087"/>
+    <ImageButton
+            android:layout_width="77dp"
+            android:layout_height="84dp" app:srcCompat="@android:drawable/ic_input_add"
+            tools:layout_editor_absoluteY="128dp" tools:layout_editor_absoluteX="149dp" android:id="@+id/imageButton"
+            tools:ignore="MissingConstraints"
+    />
+    <TextView
+            android:text="TextView"
+            android:layout_width="312dp"
+            android:layout_height="106dp" tools:layout_editor_absoluteY="331dp"
+            tools:layout_editor_absoluteX="38dp" android:id="@+id/textView" tools:ignore="MissingConstraints"/>
 
 </android.support.constraint.ConstraintLayout>
